Update chart-release workflow to use hr-assistant instead of suse-ai-hr-assistant
Update the workflow_dispatch input options to reflect the renamed chart.

Signed-off-by: wiredquill <wiredquill@users.noreply.github.com>

--- a/.github/workflows/chart-release.yml
+++ b/.github/workflows/chart-release.yml
@@ -8,7 +8,7 @@ on:
         required: true
         type: choice
         options:
-          - suse-ai-hr-assistant
+          - hr-assistant
           - ai-compare
           - ai-compare-suse
           - ai-compare-opentelemetry
