--- a/charts/hr-assistant/templates/cronjob.yaml
+++ b/charts/hr-assistant/templates/cronjob.yaml
@@ -34,7 +34,7 @@ spec:
       {{- end }}
       labels:
         {{- include "hr-assistant.labels" . | nindent 8 }}
-        {{- with .Values.pobLabels }}
+        {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
     spec:
@@ -45,7 +45,7 @@ spec:
           serviceAccountName: {{ include "hr-assistant.serviceAccountName" . }}
           containers:
           - command:
-            - bin/sh
+            - /bin/sh
             - -c
             - /app/run.sh
             env:
