--- a/charts/hr-assistant/templates/deployment-hr-assistant.yaml
+++ b/charts/hr-assistant/templates/deployment-hr-assistant.yaml
@@ -38,11 +38,11 @@ spec:
           - name: APP_NAME
             value: HRAssistant
           - name: MODEL
-            value: "{{ .Values.model }}"
+            value: "llama3.2:1b"
           - name: OLLAMA_ENDPOINT
-            value: "{{ include "hr-assistant.ollamaEndpoint" . }}"
+            value: {{ include "hr-assistant.ollamaEndpoint" . }}
           - name: OTLP_ENDPOINT
-            value: "{{ .Values.otlpEndpoint }}"
+            value: {{ .Values.otlpEndpoint }}
           - name: COLLECT_GPU_STATS
             value: "{{ .Values.collectGpuStats }}"
           securityContext:
@@ -53,22 +53,6 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 10
-            periodSeconds: 5
-            timeoutSeconds: 3
-            failureThreshold: 2
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
